# ACCPA_2025

./: CMakeLists.txt  Makefile  README.md  Stella.cf
src/: Eval.cpp  Eval.h  Interpret.cpp  TypeCheck.cpp  TypeCheck.h  VisitTypeCheck.cpp  VisitTypeCheck.h
src/Stella/: Absyn.C  Absyn.H  Bison.H  Buffer.C  Lexer.C  Makefile  Parser.C  Parser.H  ParserError.H  Printer.C  Printer.H  Skeleton.C  Skeleton.H  Stella.l  Stella.y  Test.C
tests/week-5/public/: 71.stella
